# hometown-engine

./: .gitignore  CLAUDE.md  LICENSE  README.md
.github/: PULL_REQUEST_TEMPLATE.md
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/app/: config.py  main.py
backend/app/prompts/: agent.txt  discovery.txt  why_engine.txt
backend/app/routes/: agent.py  hubs.py  regions.py
backend/app/services/: bigquery_client.py  gemini.py
data/pipelines/: aggregate.py  bq_climate.py  bq_load.py  bq_regions.py  build_discovery.py
data/processed/: aggregate_quality_report.json  athletes_aggregate.csv  athletes_aggregate.parquet  discovery.json
data/schemas/: athletes_aggregate.sql  climate.sql  regions.sql
data/scrapers/: wikipedia_team_sports_patch.py  wikipedia_team_usa.py
data/spike/: SPIKE_FINDINGS.md  probe_team_sports.py  probe_wikidata.py  probe_wikidata_v2.py  probe_wikipedia.py  probe_wikipedia_v2.py
data/validation/: check_known_hubs.py
docs/: day2-summary.md  demo-script.md  devpost-form-fields.md  devpost-submission.md  final-compliance-report.md  youtube-description.md  zoom-recording-cheatsheet.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
frontend/public/: robots.txt
frontend/src/: App.tsx  index.css
frontend/src/components/: AthleteSummary.tsx  Chat.tsx  DiscoveryGrid.tsx  Layout.tsx  Narrative.tsx  USMap.tsx
frontend/src/pages/: Home.tsx  Region.tsx
infra/: deploy_backend.sh  deploy_frontend.sh  warmup_demo.sh
