[project]
name = "hometown-engine-backend"
version = "0.1.0"
description = "FastAPI backend for the Hometown Engine — Team USA hackathon submission."
requires-python = ">=3.11,<3.13"
dependencies = [
  "fastapi==0.115.5",
  "uvicorn[standard]==0.32.1",
  "pydantic==2.10.3",
  "pydantic-settings==2.7.0",
  "google-cloud-bigquery==3.27.0",
  "google-cloud-aiplatform==1.74.0",
  "google-genai==1.66.0",
  "db-dtypes==1.3.1",
  "pyarrow==18.1.0",
  "pandas==2.2.3",
  "httpx==0.28.1",
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.4",
  "pytest-asyncio==0.25.0",
  "ruff==0.8.2",
  "mypy==1.13.0",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
